# hydra

./: .travis.yml  CMakeLists.txt
include/: aabb.h  hitinfo.h  hydra.h  kraken-math.h  matrix2.h  matrix2x3.h  matrix4.h  quaternion.h  scalar.h  triangle3.h  vector2.h  vector2i.h  vector3.h  vector3i.h  vector4.h
src/: aabb.cpp  hitinfo.cpp  krhelpers.cpp  krhelpers.h  matrix2.cpp  matrix2x3.cpp  matrix4.cpp  quaternion.cpp  scalar.cpp  triangle3.cpp  vector2.cpp  vector2i.cpp  vector3.cpp  vector3i.cpp  vector4.cpp
